# HandyExample

./: meson.build
data/: me.paladin.HandyExample.appdata.xml.in  me.paladin.HandyExample.desktop.in  me.paladin.HandyExample.gresource.xml  me.paladin.HandyExample.gschema.xml  meson.build
data/ui/: window-main.ui  window-tabs.ui
po/: POTFILES
src/: main.vala  meson.build
src/core/: application.vala
src/ui/: main-window.vala  tabs-window.vala
